Finish fixing profile.
Still a small bug where the page is slightly too long for viewport but
fuck it.

--- a/ClientApp/src/components/Shared/Overview.css
+++ b/ClientApp/src/components/Shared/Overview.css
@@ -7,17 +7,12 @@
 }
 
 .af-ov-static {
-    width: 50%;
     height: 100vh;
     flex-grow: 1;
-    background-color: #66000022;
 }
 
 .af-ov-scroll {
-    width: 50%;
     position: relative;
-    left: 50%;
-    background-color: #00880022;
 }
 
 .af-ov-navbar-placeholder {
